--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,7 +53,34 @@
             </nav>
         </div>
         {# Jumbotron #}
-        {% block searchProject %}{% endblock %}
+        {% set searchForm = form_search.getForm().createView() %}
+        {# {% block searchProject %}{% endblock %} #}
+        {# Search #}
+    <div class="jumbotron jumbotron-header ">
+        <div class="container mt-5" id="search-panel"> 
+            {# <h1 class="mb-5 text-center"><i class="fas fa-search VaderBlue"></i><span class="ml-1 VaderBlue">Trouvez un projet</span></h1>             #}
+            {{ form_start(searchForm) }}
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-sm-4">
+                        {{ form_row(searchForm.date) }}
+                    </div>
+                    <div class="col-sm-1 mb-3 text-white">
+                        <div>et / ou</div>
+                    </div>
+                    <div class="col-sm-4">
+                        {{ form_row(searchForm.name) }}
+                    </div>
+                    <div class="col-auto">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-search"><i class="fas fa-search text-white"></i><span class="ml-1 text-white">Rechercher</span></button>
+                        </div>
+                    </div>
+                </div>               
+            {{ form_end(searchForm) }}
+        </div>
+    </div>
+        
+
 
         {# navbar #}            
             
