--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -9,7 +9,7 @@
             <button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
             <a class="btn btn-secondary" href="{{ path('project_index') }}">Retour à  la liste</a>
 
-            {% import _self as formMacros %}:
+            {% import _self as formMacros %}
             {% macro printTjms(TjmsForm) %}
             <div class="card mb-2">
                 <div class="card-body">
