--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         {# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> #}
         
         {# <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"> #}
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.3/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.css"/>      
+        {# <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.3/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.css"/>       #}
         {# <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
         <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.0/css/select.dataTables.min.css"> #}
 
@@ -109,9 +109,9 @@
         {# <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script> #}
         
         
-        <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.3/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.js"></script>
-        <script src="https://cdn.datatables.net/plug-ins/1.10.19/api/column().title().js"></script>        
-        <script src="https://kit.fontawesome.com/3d1ac31d35.js"></script>
+        {# <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.3/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.js"></script> #}
+        {# <script src="https://cdn.datatables.net/plug-ins/1.10.19/api/column().title().js"></script>         #}
+        {# <script src="https://kit.fontawesome.com/3d1ac31d35.js"></script> #}
 
         {# <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
         <script src="https://cdn.datatables.net/select/1.3.0/js/dataTables.select.min.js"></script> #}
@@ -122,304 +122,6 @@
                 
         
         <script>
-        $(document).ready(function() {
-
-            //Initialize                       
-            calculateForOneRowClickable();
-            update();
-            autocomplete();
-            
-
-            //New function
-            function calculateForOneRowClickable(){
-                var row = 0,
-                col = 0,
-                ncol = 0;
-                var sum;                
-                var arrayRowToCalculate = $("activity tbody .poleclickable").nextUntil('.lastRow').add('tr');
-                
-                // sum by row                
-                $(arrayRowToCalculate).each(function (rowindex) {
-                    sum = 0;
-                    col = 0;
-                    $(this).find("td.edit-for").each(function (colindex) {
-                        col++;
-                        //newval = $(this).find("input").val();                     
-                        //if (isNaN(newval)) {
-                            //$(this).html(sum);
-                            if (col > ncol) {
-                                ncol = col - 1
-                            }
-                        //} else {
-                        //  sum += parseInt(newval);
-                    //}
-                    });
-                });
-                // sum by col
-                for (col = 2; col < ncol + 3; col++) {
-                    console.log("column: " + col);
-                    sum = 0;
-                    $($(arrayRowToCalculate).get().reverse()).each(function (rowindex) {
-                        $(this).find("td:nth-child(" + col + ")").each(function (rowindex) {
-                            newval = $(this).find("input").val();
-                            console.log(newval);
-                            if ( (isNaN(newval)) && ($(this).hasClass("colSum")) ){
-                                $(this).html(sum);
-                                sum=0;
-                            } else {
-                                sum += parseInt(newval);
-                            }
-                        });
-                    });
-                }
-            }
-            //end of function
-
-            //function slide down
-            $(".child").hide();            
-            $(".poleclickable").click(function(){
-                $(this).closest('tr').nextUntil('.poleclickable').slideToggle();                              
-            });
-           
-            
-            //function Autocomplete Ajax
-            $("#searchNameInput").autocomplete({
-                source: function (request, response) {
-                    $.ajax({
-                        url: "/project/search",
-                        dataType: "json",
-                        data: {
-                            term: request.term
-                        },
-                        success: function (data) {
-                            response(data);
-                        }
-                    });
-                },
-                minLength: 2,
-                select: function (event, ui) {
-                    log("Selected: " + ui.item.value + " aka " + ui.item.id);
-                }
-            });
-
-            //function autocomplete search
-            $(function (){
-                 var projects = [
-                    "Projet1",
-                    "Projet2",
-                    "Amilnote",
-                    "Babiltone",
-                    "CvGenerator"                    
-                ];
-                $( "#recherche" ).autocomplete({
-                source: projects
-                });
-            });
-
-            //function autocomplete search
-            function autocomplete(){
-                 var profiles = [
-                    "Junior",
-                    "Design",
-                    "Lead",
-                    "Confirmé",
-                    "Projet Web",
-                    "Projet Web",
-                    "Projet mobile Android",
-                    "Expert",
-                    "Projet Mobile IOS",
-                    "Projet Jira Interne 4",
-                    "Projet Jira Externe",
-                ];
-                $( ".profile" ).autocomplete({
-                source: profiles
-                });
-            };
-
-             
-            
-                        
-
-            //function
-            function update(){
-                $("#activity tbody :input").on("change paste", function(e){
-                    
-                    //function input value Regex                    
-                    $('#response').removeClass("visible").addClass("invisible");
-
-                    var error = 0;
-                    var element = $(this);
-                    var rank = parseInt(element.val());
-                    var availableRank = [0,1,2,3,4,5,6,7,8,9];
-                    if (jQuery.inArray(parseInt(rank), availableRank) ==-1){
-                        var error = 1;
-                        var errorMsg = 'Vous devez entrer un chiffre compris entre 1 et 9';
-                        $('#response').text(errorMsg);
-                        $('#response').addClass("visible alert alert-danger").removeClass("invisible");
-                        $( this).focus();
-                        $( this).addClass("text-danger");
-
-
-                    } else { 
-                        calculateForOneRowClickable();
-                        //Update on next, previous, enter
-                        var id = element.attr('id');                                                                                        
-                        var emptyMonth = table.column(element.closest('td')).title();              
-                        var projectName = $('#projectName').text();
-                        var profileName = table.row(element.parents('tr')).data()[0];                                                                                    
-                        var poleName = element.closest('tr').next().prevUntil('tr.poleclickable').last().prev('tr').children().first().text();
-                                
-                        $.ajax({
-                            url:'/activity/update',
-                            type: "POST",
-                            dataType: "json",
-                            data: {
-                                "rank": rank,
-                                "id": id,
-                                "emptyMonth": emptyMonth,                            
-                                "projectName": projectName,
-                                "profileName": profileName,
-                                "poleName": poleName
-                            },
-                            async: true,
-                            success: function (data)
-                            {
-                                console.log(data);
-                                var successMsg = 'Vous avez atrtibué la note de ' + data.rank;
-                                $('#response').text(successMsg); 
-                                $('#response').addClass("visible alert alert-success").removeClass("invisible"); 
-                            }
-                        });
-                    } 
-                })                    
-            }
-
-
-            
-
-            //Initialize var DataTable
-            var table = $('#activity').DataTable({                
-                    //ajax:'/ajax',
-                    "ordering": false,
-                    "paging": false
-                    
-            });
-
-            
-            
-
-            //initialization 11 colums array
-            var key = parseInt($('#key').text());
-            var nbColumns = parseInt($('#nbColumns').text());         
-            var range = parseInt(5);
-            var keyRange = key+range;  
-            
-            
-            for ( var i=1; i<nbColumns; i++ ){
-               table.column( i ).visible( false, false );
-            }
-            for ( var i=key; i<keyRange; i++ ){
-               table.column( i ).visible( true, true );               
-            }
-            
-            //button next
-            $(".next").on("click", function(e){
-                e.preventDefault();
-
-                for ( var i=1; i<nbColumns; i++){
-                table.column( i ).visible( false, false );
-                }
-
-                if (keyRange<nbColumns){
-                   key++;
-                   keyRange++;     
-                }
-
-                for ( var i=key ; i<keyRange ; i++ ) {
-                    table.column( i ).visible( true, true )
-                }                
-                table.columns.adjust().draw( false );
-                var currentMonth = table.column( key ).title();
-                $('#currentMonth').text(currentMonth);      
-            });
-
-            
-
-            //button previous
-            $(".previous").on("click", function(e){
-                e.preventDefault();
-                for ( var i=1; i<nbColumns; i++){
-                table.column( i ).visible( false, false );
-                }
-
-                if (key>1) {
-                   key--;
-                   keyRange--;     
-                }                               
-                
-                for ( var i=key ; i<keyRange ; i++ ) {
-                    table.column( i ).visible( true, true );                   
-                }
-                table.columns.adjust().draw( false );
-                var currentMonth = table.column( key ).title();
-                $('#currentMonth').text(currentMonth);
-            });
-
-
-             //addRow
-            $('.addRow').on( 'click', function (e) {
-                e.preventDefault();
-
-                //Rajouter la mise en mémoire du index, 
-                //Puis rendre visible tout
-                
-                //initialization 11 colums array
-                var key = parseInt($('#key').text());
-                var nbColumns = parseInt($('#nbColumns').text());         
-                var range = parseInt(5);
-                var keyRange = key+range;  
-
-                //Set all columns visible and Copy it
-                for ( var i=1; i<nbColumns; i++ ){
-                table.column( i ).visible( true, true );
-                }
-
-                //addRow + class
-                var col = [""];
-                for (i= 0; i<nbColumns-1; i++) {
-                   col.push('');  
-                }
-                col.push('<i class="fas fa-trash-alt"></i>')              
-                var rowNode = table.row.add(col).draw().node();
-                
-                $(rowNode).find('td').addClass('edit-for');
-                $(rowNode).find('td').eq(-1).removeClass("edit-for").addClass("trash");                
-                $(rowNode).find('td').eq(0).removeClass("edit-for").addClass("profile");
-                autocomplete();
-
-                //set all columns invisible and make visible from index
-                for ( var i=1; i<nbColumns; i++ ){
-               table.column( i ).visible( false, false );
-                }
-                for ( var i=key; i<keyRange; i++ ){
-                table.column( i ).visible( true, true );               
-                }
-            });
-
-
-            //delete row
-             $('#activity tbody').on('click', "td.trash", function () {
-                if ( confirm( "Etes vous sûr de vouloir supprimer cette ligne ?" ) ) {
-                     table
-                        .row( $(this).parents('tr') )
-                        .remove()
-                        .draw();
-                }               
-            });
-
-
-
-        });
         </script>
         <script>
         </script>   
