--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -31,7 +31,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4">Pas d'enregistrement trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
