--- a/templates/profile/new.html.twig
+++ b/templates/profile/new.html.twig
@@ -8,7 +8,7 @@
         <div class="colm-md-6">
             <h1>Ajouter un profil</h1>
             {{ include('profile/_form.html.twig') }}
-            <a href="{{ path('profile_index') }}">Retour to list</a>
+            <a href="{{ path('profile_index') }}">Retour à la liste</a>
         </div>
     </div>
 </div>    
