--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg justify-content-between navbar-white bg-VaderBlue">           
                 <a class="navbar-brand" href={{ path('home') }}> 
-                <img src="{{ asset('build/images/logo_amiltone.0d871272.png') }}" width="auto" height="50" alt="">
+                <img src="{{ asset('build/static/logo_amiltone.png') }}" width="auto" height="50" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
