--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,8 @@
         {# navbar #}
         <div class="container">
             <nav class="navbar fixed-top navbar-expand-lg justify-content-between navbar-white bg-VaderBlue">           
-                <a class="navbar-brand" href={{ path('home') }}> 
-                <img src="{{ asset('build/static/logo_amiltone.png') }}" width="auto" height="50" alt="">
+                <a class="navbar-brand" href={{ path('home') }}>
+                    <img src="{{ asset('build/static/logoAmiltone.svg') }}" alt="logo amiltone"  width="200" height="auto" class="d-inline-block align-middle" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
