--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,8 +6,8 @@
 
 {% block body %} 
 <div class="container lastProjects">
-    <h5 class="label VaderBlue">{{ Arraytitle }}</h5>
-    <table class="table table-striped table-hover">
+    <h1 class="label">{{ Arraytitle }}</h1>
+    <table class="table table-striped table-hover table-md shadow-lg rounded">
         <thead>
             <tr>
             <th scope="col">Nom</th>
